libcdi/src/cdi.h

void    streamCopyRecord(int streamIDdest, int streamIDsrc);
/* VLIST routines */

/*      vlistCreate: Create a variable list */
int     vlistCreate(void);
/*      vlistDestroy: Destroy a variable list */
void    vlistDestroy(int vlistID);
/*      vlistDuplicate: Duplicate a variable list */
int     vlistDuplicate(int vlistID);
/*      vlistCopy: Copy a variable list */
void    vlistCopy(int vlistID2, int vlistID1);
/*      vlistCopyFlag: Copy some entries of a variable list */
void    vlistCopyFlag(int vlistID2, int vlistID1);
void    vlistClearFlag(int vlistID);
/*      vlistCat: Concatenate two variable lists */
void    vlistCat(int vlistID2, int vlistID1);
/*      vlistMerge: Merge two variable lists */
void    vlistMerge(int vlistID2, int vlistID1);
void    vlistPrint(int vlistID);
/*      vlistNumber: Number type in a variable list */
int     vlistNumber(int vlistID);
/*      vlistNvars: Number of variables in a variable list */
int     vlistNvars(int vlistID);
/*      vlistNgrids: Number of grids in a variable list */
int     vlistNgrids(int vlistID);
/*      vlistNzaxis: Number of zaxis in a variable list */
int     vlistNzaxis(int vlistID);
void    vlistDefNtsteps(int vlistID, int nts);
int     vlistNtsteps(int vlistID);
int     vlistGridsizeMax(int vlistID);
int     vlistGrid(int vlistID, int index);
int     vlistGridIndex(int vlistID, int gridID);
void    vlistChangeGridIndex(int vlistID, int index, int gridID);
void    vlistChangeGrid(int vlistID, int gridID1, int gridID2);
int     vlistZaxis(int vlistID, int index);
int     vlistZaxisIndex(int vlistID, int zaxisID);
void    vlistChangeZaxisIndex(int vlistID, int index, int zaxisID);
void    vlistChangeZaxis(int vlistID, int zaxisID1, int zaxisID2);
int     vlistNrecs(int vlistID);
/*      vlistDefTaxis: Define the time axis of a variable list */
void    vlistDefTaxis(int vlistID, int taxisID);
/*      vlistInqTaxis: Get the time axis of a variable list */
int     vlistInqTaxis(int vlistID);
void    vlistDefTable(int vlistID, int tableID);
int     vlistInqTable(int vlistID);
void    vlistDefInstitut(int vlistID, int instID);
int     vlistInqInstitut(int vlistID);
void    vlistDefModel(int vlistID, int modelID);
int     vlistInqModel(int vlistID);
/* VLIST VAR routines */

/*      vlistDefVar: Create a new Variable */
int     vlistDefVar(int vlistID, int gridID, int zaxisID, int tsteptype);
void    vlistChangeVarGrid(int vlistID, int varID, int gridID);
void    vlistChangeVarZaxis(int vlistID, int varID, int zaxisID);
void    vlistInqVar(int vlistID, int varID, int *gridID, int *zaxisID, int *tsteptype);
int     vlistInqVarGrid(int vlistID, int varID);
int     vlistInqVarZaxis(int vlistID, int varID);
/* used in MPIOM */
int     vlistInqVarID(int vlistID, int code);
void    vlistDefVarTsteptype(int vlistID, int varID, int tsteptype);