libcdi/src/mo_cdi.f90

        subroutine streamCopyRecord(streamIDdest,streamIDsrc) bind(c,name='streamCopyRecord')
          import :: c_int
          integer(kind=c_int), value :: streamIDdest
          integer(kind=c_int), value :: streamIDsrc
        end subroutine streamCopyRecord
      end interface
      interface
        function vlistCreate() bind(c,name='vlistCreate')
          import :: c_int
          integer(kind=c_int) :: vlistCreate
        end function vlistCreate
      end interface
      interface
        subroutine vlistDestroy(vlistID) bind(c,name='vlistDestroy')
          import :: c_int
          integer(kind=c_int), value :: vlistID
        end subroutine vlistDestroy
      end interface
      interface
        function vlistDuplicate(vlistID) bind(c,name='vlistDuplicate')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistDuplicate
        end function vlistDuplicate
      end interface
      interface
        subroutine vlistCopy(vlistID2,vlistID1) bind(c,name='vlistCopy')
          import :: c_int
          integer(kind=c_int), value :: vlistID2
          integer(kind=c_int), value :: vlistID1
        end subroutine vlistCopy
      end interface
      interface
        subroutine vlistCopyFlag(vlistID2,vlistID1) bind(c,name='vlistCopyFlag')
          import :: c_int
          integer(kind=c_int), value :: vlistID2
          integer(kind=c_int), value :: vlistID1
        end subroutine vlistCopyFlag
      end interface
      interface
        subroutine vlistClearFlag(vlistID) bind(c,name='vlistClearFlag')
          import :: c_int
          integer(kind=c_int), value :: vlistID
        end subroutine vlistClearFlag
      end interface
      interface
        subroutine vlistCat(vlistID2,vlistID1) bind(c,name='vlistCat')
          import :: c_int
          integer(kind=c_int), value :: vlistID2
          integer(kind=c_int), value :: vlistID1
        end subroutine vlistCat
      end interface
      interface
        subroutine vlistMerge(vlistID2,vlistID1) bind(c,name='vlistMerge')
          import :: c_int
          integer(kind=c_int), value :: vlistID2
          integer(kind=c_int), value :: vlistID1
        end subroutine vlistMerge
      end interface
      interface
        subroutine vlistPrint(vlistID) bind(c,name='vlistPrint')
          import :: c_int
          integer(kind=c_int), value :: vlistID
        end subroutine vlistPrint
      end interface
      interface
        function vlistNumber(vlistID) bind(c,name='vlistNumber')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNumber
        end function vlistNumber
      end interface
      interface
        function vlistNvars(vlistID) bind(c,name='vlistNvars')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNvars
        end function vlistNvars
      end interface
      interface
        function vlistNgrids(vlistID) bind(c,name='vlistNgrids')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNgrids
        end function vlistNgrids
      end interface
      interface
        function vlistNzaxis(vlistID) bind(c,name='vlistNzaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNzaxis
        end function vlistNzaxis
      end interface
      interface
        subroutine vlistDefNtsteps(vlistID,nts) bind(c,name='vlistDefNtsteps')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: nts
        end subroutine vlistDefNtsteps
      end interface
      interface
        function vlistNtsteps(vlistID) bind(c,name='vlistNtsteps')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNtsteps
        end function vlistNtsteps
      end interface
      interface
        function vlistGridsizeMax(vlistID) bind(c,name='vlistGridsizeMax')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistGridsizeMax
        end function vlistGridsizeMax
      end interface
      interface
        function vlistGrid(vlistID,index) bind(c,name='vlistGrid')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: index
          integer(kind=c_int) :: vlistGrid
        end function vlistGrid
      end interface
      interface
        function vlistGridIndex(vlistID,gridID) bind(c,name='vlistGridIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: vlistGridIndex
        end function vlistGridIndex
      end interface
      interface
        subroutine vlistChangeGridIndex(vlistID,index,gridID) bind(c,name='vlistChangeGridIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: index
          integer(kind=c_int), value :: gridID
        end subroutine vlistChangeGridIndex
      end interface
      interface
        subroutine vlistChangeGrid(vlistID,gridID1,gridID2) bind(c,name='vlistChangeGrid')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: gridID1
          integer(kind=c_int), value :: gridID2
        end subroutine vlistChangeGrid
      end interface
      interface
        function vlistZaxis(vlistID,index) bind(c,name='vlistZaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: index
          integer(kind=c_int) :: vlistZaxis
        end function vlistZaxis
      end interface
      interface
        function vlistZaxisIndex(vlistID,zaxisID) bind(c,name='vlistZaxisIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int) :: vlistZaxisIndex
        end function vlistZaxisIndex
      end interface
      interface
        subroutine vlistChangeZaxisIndex(vlistID,index,zaxisID) bind(c,name='vlistChangeZaxisIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: index
          integer(kind=c_int), value :: zaxisID
        end subroutine vlistChangeZaxisIndex
      end interface
      interface
        subroutine vlistChangeZaxis(vlistID,zaxisID1,zaxisID2) bind(c,name='vlistChangeZaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: zaxisID1
          integer(kind=c_int), value :: zaxisID2
        end subroutine vlistChangeZaxis
      end interface
      interface
        function vlistNrecs(vlistID) bind(c,name='vlistNrecs')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistNrecs
        end function vlistNrecs
      end interface
      interface
        subroutine vlistDefTaxis(vlistID,taxisID) bind(c,name='vlistDefTaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: taxisID
        end subroutine vlistDefTaxis
      end interface
      interface
        function vlistInqTaxis(vlistID) bind(c,name='vlistInqTaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistInqTaxis
        end function vlistInqTaxis
      end interface
      interface
        subroutine vlistDefTable(vlistID,tableID) bind(c,name='vlistDefTable')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: tableID
        end subroutine vlistDefTable
      end interface
      interface
        function vlistInqTable(vlistID) bind(c,name='vlistInqTable')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistInqTable
        end function vlistInqTable
      end interface
      interface
        subroutine vlistDefInstitut(vlistID,instID) bind(c,name='vlistDefInstitut')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: instID
        end subroutine vlistDefInstitut
      end interface
      interface
        function vlistInqInstitut(vlistID) bind(c,name='vlistInqInstitut')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistInqInstitut
        end function vlistInqInstitut
      end interface
      interface
        subroutine vlistDefModel(vlistID,modelID) bind(c,name='vlistDefModel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: modelID
        end subroutine vlistDefModel
      end interface
      interface
        function vlistInqModel(vlistID) bind(c,name='vlistInqModel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int) :: vlistInqModel
        end function vlistInqModel
      end interface
      interface
        function vlistDefVar(vlistID,gridID,zaxisID,tsteptype) bind(c,name='vlistDefVar')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int), value :: tsteptype
          integer(kind=c_int) :: vlistDefVar
        end function vlistDefVar
      end interface
      interface
        subroutine vlistChangeVarGrid(vlistID,varID,gridID) bind(c,name='vlistChangeVarGrid')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: gridID
        end subroutine vlistChangeVarGrid
      end interface
      interface
        subroutine vlistChangeVarZaxis(vlistID,varID,zaxisID) bind(c,name='vlistChangeVarZaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: zaxisID
        end subroutine vlistChangeVarZaxis
      end interface
      interface
        subroutine vlistInqVar(vlistID,varID,gridID,zaxisID,tsteptype) bind(c,name='vlistInqVar')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), intent(out) :: gridID
          integer(kind=c_int), intent(out) :: zaxisID
          integer(kind=c_int), intent(out) :: tsteptype
        end subroutine vlistInqVar
      end interface
      interface
        function vlistInqVarGrid(vlistID,varID) bind(c,name='vlistInqVarGrid')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarGrid
        end function vlistInqVarGrid
      end interface
      interface
        function vlistInqVarZaxis(vlistID,varID) bind(c,name='vlistInqVarZaxis')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarZaxis
        end function vlistInqVarZaxis
      end interface
      interface
        function vlistInqVarID(vlistID,code) bind(c,name='vlistInqVarID')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: code
          integer(kind=c_int) :: vlistInqVarID
        end function vlistInqVarID
      end interface
      interface
        subroutine vlistDefVarTsteptype(vlistID,varID,tsteptype) bind(c,name='vlistDefVarTsteptype')
          import :: c_int
